--- a/MemeThing/Views/Base.lproj/Main.storyboard
+++ b/MemeThing/Views/Base.lproj/Main.storyboard
@@ -35,13 +35,13 @@
                                 </subviews>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="Lol-Sz-ptg">
-                                <rect key="frame" x="41.5" y="287" width="331" height="286.5"/>
+                                <rect key="frame" x="41.5" y="280.5" width="331" height="300"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="53Q-PZ-Azf">
-                                        <rect key="frame" x="0.0" y="0.0" width="331" height="45"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="331" height="44.5"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TA2-Zb-LEP">
-                                                <rect key="frame" x="0.0" y="0.0" width="165.5" height="45"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="165.5" height="44.5"/>
                                                 <color key="backgroundColor" systemColor="systemGray4Color" red="0.81960784310000001" green="0.81960784310000001" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <color key="tintColor" name="purpleAccent"/>
                                                 <state key="normal" title="Sign Up"/>
@@ -50,7 +50,7 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Asi-DS-fLW">
-                                                <rect key="frame" x="165.5" y="0.0" width="165.5" height="45"/>
+                                                <rect key="frame" x="165.5" y="0.0" width="165.5" height="44.5"/>
                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <color key="tintColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <state key="normal" title="Log In"/>
@@ -61,10 +61,10 @@
                                         </subviews>
                                     </stackView>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TyY-uG-08h">
-                                        <rect key="frame" x="0.0" y="45" width="331" height="241.5"/>
+                                        <rect key="frame" x="0.0" y="44.5" width="331" height="255.5"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="lFt-yw-6cG">
-                                                <rect key="frame" x="8" y="20" width="315" height="202"/>
+                                                <rect key="frame" x="8" y="27" width="315" height="202"/>
                                                 <subviews>
                                                     <textField opaque="NO" tag="100" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Username Here" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1fD-XS-hIB" customClass="MemeThingTextField" customModule="MemeThing" customModuleProvider="target">
                                                         <rect key="frame" x="0.0" y="0.0" width="315" height="34"/>
@@ -102,6 +102,9 @@
                                         </constraints>
                                     </view>
                                 </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="300" id="ZkL-BW-XhN"/>
+                                </constraints>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cam-3L-kts" customClass="SubmitButton" customModule="MemeThing" customModuleProvider="target">
                                 <rect key="frame" x="269" y="770.5" width="103.5" height="44.5"/>
@@ -123,7 +126,6 @@
                             <constraint firstItem="cam-3L-kts" firstAttribute="height" secondItem="jaz-qT-BjZ" secondAttribute="height" multiplier="0.05" id="JsU-Q5-p2S"/>
                             <constraint firstItem="RH0-Qc-nWr" firstAttribute="centerY" secondItem="TCl-xO-nvx" secondAttribute="centerY" multiplier="0.25" priority="999" id="MBw-7A-XxJ"/>
                             <constraint firstItem="cam-3L-kts" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="TCl-xO-nvx" secondAttribute="leading" symbolic="YES" id="OOa-kE-wIg"/>
-                            <constraint firstItem="Lol-Sz-ptg" firstAttribute="height" secondItem="TCl-xO-nvx" secondAttribute="height" multiplier="0.35" id="VZs-4P-vP6"/>
                             <constraint firstItem="cam-3L-kts" firstAttribute="centerY" secondItem="TCl-xO-nvx" secondAttribute="centerY" multiplier="1.75" id="Vxi-zM-2Jq"/>
                             <constraint firstItem="Lol-Sz-ptg" firstAttribute="centerY" secondItem="TCl-xO-nvx" secondAttribute="centerY" multiplier="0.95" id="eqd-eO-1c3"/>
                             <constraint firstItem="Lol-Sz-ptg" firstAttribute="width" secondItem="jaz-qT-BjZ" secondAttribute="width" multiplier="0.8" id="hCY-QT-NOp"/>
@@ -137,13 +139,17 @@
                         </connections>
                     </view>
                     <connections>
+                        <outlet property="buttonsStackView" destination="53Q-PZ-Azf" id="B6e-4d-ij6"/>
                         <outlet property="confirmPasswordTextField" destination="Ea3-oj-rzn" id="FCw-Xu-Ea5"/>
                         <outlet property="doneButton" destination="cam-3L-kts" id="SAk-I6-a2L"/>
                         <outlet property="emailTextField" destination="twx-kb-Bqy" id="f5Q-Dq-d9U"/>
+                        <outlet property="keyboardHeightLayoutConstraint" destination="eqd-eO-1c3" id="C1k-sw-Dw3"/>
                         <outlet property="loginToggleButton" destination="Asi-DS-fLW" id="eSc-Hz-h9l"/>
                         <outlet property="passwordTextField" destination="IxU-ce-hvA" id="lzg-3M-IKU"/>
                         <outlet property="screenNameTextField" destination="qwu-Ed-SWn" id="yEY-gX-Uaq"/>
                         <outlet property="signUpToggleButton" destination="TA2-Zb-LEP" id="3Gf-Ku-2Tg"/>
+                        <outlet property="stackViewHeightLayoutConstraint" destination="ZkL-BW-XhN" id="cBd-Oc-GGR"/>
+                        <outlet property="textFieldsStackView" destination="lFt-yw-6cG" id="H52-4C-SqI"/>
                         <outlet property="usernameTextField" destination="1fD-XS-hIB" id="ozj-2i-lUR"/>
                     </connections>
                 </viewController>
